# KYC-mcp-server

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md
scripts/: install.ps1  install.sh  test_connection.py  validate_claude_config.py
system_diagnostics_mcp/: __init__.py  server.py
system_diagnostics_mcp/analyzers/: __init__.py
system_diagnostics_mcp/monitors/: __init__.py
system_diagnostics_mcp/utils/: __init__.py
tests/: __init__.py  test_server.py
