[project]
name = "system-diagnostics-mcp"
version = "1.0.0"
description = "Comprehensive system monitoring and diagnostics MCP server"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "mcp>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
windows = [
    "wmi>=1.5.1",
    "pywin32>=306",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
system-diagnostics-mcp = "system_diagnostics_mcp.server:main"